# hmodel-mat

./: D.mat  INITIALIZE_FITTING.m  INITIALIZE_FROM_HTRACK.asv  INITIALIZE_FROM_HTRACK.m  INITIALIZE_IK.asv  INITIALIZE_IK.m  INITIALIZE_TRACKING.asv  INITIALIZE_TRACKING.m  ITERATION_LSQNONLIN.m  MAIN_FITTING.m  MAIN_FITTING_LSQNONLIN.m  MAIN_FITTING_NO_BACK.m  MAIN_TRACKING.m  MData.mat  MData_12000_2.mat  MData_20000.mat  RUN_ARAP.asv  RUN_ARAP.m  RUN_ARAP_FIXED.asv  RUN_ARAP_FIXED.m  RUN_ARAP_NO_GRADIENTS.asv  RUN_ARAP_NO_GRADIENTS.m  RUN_ARAP_REAL.m  RUN_IK.asv  RUN_IK.m  RUN_IK_HMODEL.asv  RUN_IK_HMODEL.m  SEMANTICS.m  SEMANTICS3.m  Skeleton.docx  Sofiens_demo.asv  Sofiens_demo.m  Untitled.m  Untitled2.m  X.mat  align_restpose_hmodel_with_htrack.m  block_from_hash.m  c1.mat  c2.mat  c3.mat  (+54 more)
_cpp/: joint_info.txt  kinematic_chain.txt
common/: SpinCalc.m  affine_fit.m  axis_angle_rotation_matrix.m  circle_in_plane.m  compute_principle_axis.m  convert_depthimage_to_pointcloud.m  convert_rotations.m  draw_circle.m  draw_circle_in_plane.m  draw_circle_sector.m  draw_circle_sector_in_plane.m  draw_cone.m  draw_conic_surfaces_analytically.m  draw_conic_surfaces_implicitly.m  draw_convsegment.m  draw_plane.m  draw_sphere.m  draw_sphere_isosurface.m  draw_tangents.m  draw_triangle.m  draw_trimmed_cone.m  eul2rotm.m  extractfield.m  find_frame.m  find_svd_rotation.m  fit_svd_rotation.m  get_agnle_3D.m  get_convolution_radius_at_points.m  get_convsegment_tangent_points_along_vector.m  get_tangents.asv  get_tangents.m  intersect_arc_arc.m  intersect_arc_segment.m  intersect_circle_circle.m  intersect_circle_line.m  intersect_circle_segment.m  intersect_line_line.m  intersect_segment_segment_same_circle.m  intersect_segment_segment_same_plane.m  intersect_triangle_segment.m  (+30 more)
correspondences/: closest_point_in_triangle.m  compute_brute_force_projections.m  compute_projections.m  compute_projections_front.asv  compute_projections_front.m  compute_projections_matlab.m  compute_projections_mex.cpp  compute_projections_mex.mexw64  compute_projections_outline.m  compute_signed_distance.m  get_intersecting_blocks.m  get_neighbors.m  prepare_triangles_and_convsegments.m  projeciton_group.asv  projeciton_group.m  projection.m  projection_circle_segment.m  projection_convsegment.m  projection_convsegment_mex.cpp  projection_convsegment_outline.m  projection_convtriangle.m  projection_convtriangle_frontfacing.m  projection_convtriangle_matlab.m  projection_convtriangle_mex.cpp  projection_palm.m  projection_palm_skeleton.m  projection_palm_with_rendering.m  projection_segment.m  projection_sphere.m  projection_triangle.m  render_orthographic_model.m  test_insideness.m
cpp_interface/: pose_hand_model.m  test_wrist_joint.m  write_model_for_cpp.m
data_generation/: Untitled12.m  click_centers.m  draw_convtriangles_model.m  draw_convtriangles_model_2D.m  draw_tracking_model.m  fit_htrack_model.asv  fit_htrack_model.m  generate_collision.m  generate_convtriangles_points.m  generate_depth_data.asv  generate_depth_data.m  generate_depth_data_hmodel.m  generate_depth_data_htrack.m  generate_depth_data_synthetic.m  generate_joint_limits_violation.asv  generate_joint_limits_violation.m  generate_rigidly_transformed_data.m  generate_synthetic_data.m  generate_synthetic_data_2D.m  get_random_convquad.m  get_random_convsegment.m  get_random_convtriangle.m  get_random_sphere.m  get_transformed_points.m  initialize_model_2D.m  initialize_model_for_any_data.m  initialize_model_for_finger_data.m  initialize_model_for_hand_data.m  prepare_tracking_data.m  sample_model.m  silhouette_convtriangles.m
data_model_energy/: apply_update.m  compute_energy1.asv  (+4 more)
display/fullscreenquad/: CMakeLists.txt  fullscreenquad.cpp
display/opengl-renderer/: CMakeLists.txt  CMakeLists2.txt  Convolution_renderer.h  FindGLEW.cmake  FindGLFW.cmake  FindOpenGP.cmake  Floor.h  backup.cpp  model_fshader.glsl  model_points_fshader.glsl  model_vshader.glsl  opengl-renderer.cpp  opengl-renderer.h  vertex_shader.glsl
(+1393 files in other folders)
